 - Add daemon support in C/PHP libraries, use for submit/judgedaemon.
 - Add category to balloons list and button to view only unsent.
 - Lots of small changes to C/C++ sources and build system for better
   POSIX compliance and portability; support LLVM clang compiler.
 - Replace bash by POSIX shell in compile, testcase_run. (Closes: #1735673)

Version 3.1.0 - 14 July 2010
----------------------------
 - Add multiple testcases support.
 - Add PHP session support as alternative to IP address authentication.
   Based on patches by Tobias Werth.
 - Bugfixes and improvements to checktestdata program.
 - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)
 - Fix bug in lib.database.php with array_map "class::method" notation.
 - Add 'enabled' field to contest to allow for easier editing.
 - Only show the configured submission methods in the team manual.
 - Fix install of gendbpasswords and use /dev/urandom.
 - Add documentation on static_scoreboard.
 - Add problem subject to clarifications, idea from DomJudge@FAU.
 - Add WHILE command and tests to checktestdata syntax.
 - Move PENALTY_TIME variable out of common-config into domserver-config.
 - Add combined_scoreboard script to view scoreboard of multiple sites.
 - The judgedaemon now tries to restore a lost db connection (Closes: #2897130)
 - Fix: check for both htpasswd{,2} binaries in configure.
 - Fix white problem colour by adding a circle image with black border.
 - Ports from ETH tree: use pipes with wc and gcc.
 - Fix bug: typo in presentation-error exitcode, and add safeguard.
 - Add security: check for stale judging directories (port from ETH tree).
 - Bugfix: allow zero size testcases (port from ETH tree).
 - Show config checker runtime (port from ETH tree).
 - Make syntax highlighting more modular, and add support for the
   GeSHi syntax highlighter.
 - Add sample PDF problem texts for inclusion in the database.
 - Fix bug in handling of libmagic cookie.