@@ -29,6 +29,11 @@ cat > $DEST <<EOF
 #!/bin/sh
 # Generated shell-script to execute python interpreter on source.
 
+# Detect dirname and change dir to prevent class not found errors.
+if [ "\${0%/*}" != "\$0" ]; then
+	cd "\${0%/*}"
+fi
+
 exec python $SOURCE
 EOF
 
