@@ -32,6 +32,11 @@ cat > $DEST <<EOF
 #!/bin/sh
 # Generated shell-script to execute shell interpreter on source.
 
+# Detect dirname and change dir to prevent class not found errors.
+if [ "\${0%/*}" != "\$0" ]; then
+	cd "\${0%/*}"
+fi
+
 exec sh $RUNOPTIONS $SOURCE
 EOF
 
