@@ -14,6 +14,7 @@ Version 3.2.0 - SVN
  - Lots of small changes to C/C++ sources and build system for better
    POSIX compliance and portability; support LLVM clang compiler.
  - Replace bash by POSIX shell in compile, testcase_run. (Closes: #1735673)
+ - Create separate execdir subdir for judging. (Closes: #3041492)
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
